# DGHydro

./: .gitmodules  CMakeLists.txt  DGConfig.h.in  LICENSE  README.md
examples/: config.in
src/: CMakeLists.txt  Makefile  main.cpp  main.d
src/array/: array.hpp
src/config_file/: config_file.cpp  config_file.d  config_file.hpp
src/flux/: flux.hpp
src/gauss_quad/: gauss_quad.cpp  gauss_quad.d  gauss_quad.hpp  integral.hpp
src/initial/: initial.hpp
src/mesh/: mesh.cpp  mesh.d  mesh.hpp
src/rhs/: .#rhs.hpp  rhs.hpp  temp.hpp
src/simulation/: simulation.cpp  simulation.d  simulation.hpp  time_integrator.hpp
src/state/: array.hpp  basis.hpp  dynarray.hpp  mesharray.hpp  state.hpp  statefield.hpp
